<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Dashboard">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:elevation="0dp"
        android:gravity="top">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfileAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/profile_picture_content_desc"
                android:src="@drawable/avatar"
                app:civ_circle_background_color="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvWelcomeTextDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_medium"

                android:text="@string/welcome_back_label"
                app:layout_constraintStart_toEndOf="@+id/ivProfileAvatar"
                app:layout_constraintTop_toTopOf="@+id/ivProfileAvatar" />

            <TextView
                android:id="@+id/tvCurrentUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/current_user_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="@+id/tvWelcomeTextDashboard"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcomeTextDashboard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMoneyStats"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="20dp"
                android:background="@drawable/background_gradient"
                >

                <TextView
                    android:id="@+id/tvExpensesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/expenses_label"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_arrow_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/divider"
                    app:layout_constraintTop_toTopOf="@+id/divider" />

                <TextView
                    android:id="@+id/tvYourBalanceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="@string/your_balance_label"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/balance_hint"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#FF9800"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvYourBalanceLabel" />

                <TextView
                    android:id="@+id/tvIncomeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/income_label"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ic_arrow_up"
                    app:layout_constraintEnd_toStartOf="@+id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvExpensesLabel" />

                <TextView
                    android:id="@+id/tvIncomePercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/income_percent_hint"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvIncomeLabel"
                    app:layout_constraintStart_toStartOf="@+id/tvIncomeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvIncomeLabel" />

                <TextView
                    android:id="@+id/tvExpensesPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/expenses_percent_hint"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/tvExpensesLabel"
                    app:layout_constraintStart_toStartOf="@+id/tvExpensesLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvExpensesLabel" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvBalance" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvBudgetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/my_budgets_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cvMoneyStats"
            app:layout_constraintTop_toBottomOf="@+id/cvMoneyStats" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:paddingEnd="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/cvMoneyStats"
            app:layout_constraintStart_toStartOf="@+id/tvBudgetLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvBudgetLabel"
            tools:listitem="@layout/item_budget" />

        <TextView
            android:id="@+id/tvHistoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter"
            android:text="@string/history_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cvMoneyStats"
            app:layout_constraintTop_toBottomOf="@+id/rvBudget" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransactionHistory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHistoryLabel"
            tools:listitem="@layout/item_transaction" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>